Fix button focusing z-index

--- a/packages/components/src/date-time/style.scss
+++ b/packages/components/src/date-time/style.scss
@@ -99,6 +99,12 @@
 			border-radius: 0 3px 3px 0;
 		}
 
+		.components-datetime__time-am-button:focus,
+		.components-datetime__time-pm-button:focus {
+			position: relative;
+			z-index: 1;
+		}
+
 		.components-datetime__time-am-button.is-toggled,
 		.components-datetime__time-pm-button.is-toggled {
 			background: $light-gray-300;
